<resources>
    <string name="app_name">SoftBall名單</string>
    <string name="action_settings">Settings</string>
    <string name="team_name">棒球隊棒球隊</string>

    <string name="tab_1">球員清單</string>
    <string name="tab_2">攻守名單</string>
    <string name="tab_3">守備位置</string>

    <string name="input_team_name">請輸入球隊名稱</string>
    <string name="ok">確認</string>
    <string name="cancel">取消</string>
    <string name="paid_text">此功能免費版本未提供，\n請購買付費版本，謝謝您！</string>
    <string name="person_bar_title">球員基本資料</string>
    <string name="alert_dialog_delete">確定刪除該筆資料?</string>
    <string name="please_choice">請選擇</string>

    <string name="action_edit">編輯</string>
    <string name="action_share">分享</string>
    <string name="action_discard">刪除</string>

    <string name="person_activity_nnameText">姓名：</string>
    <string name="person_activity_nickText">暱稱：</string>
    <string name="person_activity_numberText">背號：</string>
    <string name="person_activity_habitsText">投打：</string>
    <string name="person_activity_fielderText">位置：</string>

    <string name="picture_dialog_TakePhotoText">從相機</string>
    <string name="picture_dialog_GalleryPhotoText">從相簿</string>
    <string name="picture_dialog_CancelText">取　消</string>

    <string name="loacl_backup">備份</string>
    <string name="loacl_restore">還原</string>

    <string name="def_name">強打者</string>
    <string name="def_nick">強者</string>
</resources>
