<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical"
    android:layout_gravity="center"
    >
    <Button
        android:id="@+id/picture_dialog_takePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/picture_dialog_TakePhotoText"/>
    <Button
        android:id="@+id/picture_dialog_galleryPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/picture_dialog_GalleryPhotoText"/>
    <Button
        android:id="@+id/picture_dialog_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/picture_dialog_CancelText"/>
</LinearLayout>