<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/redsand"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/person_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="?attr/colorPrimary" />

    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/person_activity_MainDrawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/person_activity_picLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/person_activity_CardView"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    card_view:cardCornerRadius="4dp">
                    <ImageView
                        android:id="@+id/person_activity_picImageView"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_margin="15dp"
                        android:layout_gravity="center"
                        android:src="@mipmap/person_default" />
                    <ImageView
                        android:id="@+id/person_activity_plusIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|right"
                        android:src="@mipmap/plus"/>
                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:id="@+id/person_activity_nameLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="30dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/person_activity_nnameText"
                        style="@style/PersonName" />
                    <TextView
                        android:id="@+id/person_activity_nameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="123"
                        style="@style/PersonName" />
                    <EditText
                        android:id="@+id/person_activity_nameEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:text="123"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/person_activity_nickLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="30dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/person_activity_nickText"
                        style="@style/PersonName" />
                    <TextView
                        android:id="@+id/person_activity_nickTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="123"
                        style="@style/PersonName" />
                    <EditText
                        android:id="@+id/person_activity_nickEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:text="123"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/person_activity_numberLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="30dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/person_activity_numberText"
                        style="@style/PersonName" />
                    <TextView
                        android:id="@+id/person_activity_numberTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="99"
                        style="@style/PersonName" />
                    <EditText
                        android:id="@+id/person_activity_numberEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="99"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/person_activity_habitsLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="30dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/person_activity_habitsText"
                        style="@style/PersonName" />
                    <TextView
                        android:id="@+id/person_activity_habitsTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="123"
                        style="@style/PersonName" />
                    <Button
                        android:id="@+id/person_activity_habitsButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="test"
                        android:visibility="invisible"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/person_activity_fielderLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="30dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/person_activity_fielderText"
                        style="@style/PersonName" />
                    <TextView
                        android:id="@+id/person_activity_fielderTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="123"
                        style="@style/PersonName" />
                    <Button
                        android:id="@+id/person_activity_fielderButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="test"
                        android:visibility="invisible"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.DrawerLayout>

</LinearLayout>





